compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__expression__variables.snap
---
source: compiler-core/src/cplusplus/tests/expression.rs
expression: "\npub fn var_test(a: Float, b: Float, c: Float) -> Float {\n  let x = a;\n  let y = b;\n  let z = c;\n  let q = a +. x +. y +. z;\n  let v = x +. b +. c;\n  v +. q +. z +. y +. x\n}\n    "
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

double var_test(double a, double b, double c);

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

double var_test(double a, double b, double c) {
  double x = a;
  double y = b;
  double z = c;
  double q = ((a + x) + y) + z;
  double v = (x + b) + c;
  return (((v + q) + z) + y) + x;
};

} // namespace my
} // namespace module

